--- a/MyHome/app/src/main/res/layout/environment_selector.xml
+++ b/MyHome/app/src/main/res/layout/environment_selector.xml
@@ -1,174 +1,182 @@
 <?xml version="1.0" encoding="utf-8"?>
-<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:fillViewport="true"
-    tools:ignore="HardcodedText">
+    android:orientation="vertical"
+    android:theme="@style/textInputLayoutStyle">
 
-    <RelativeLayout
+    <include
+        android:id="@+id/toolbar"
+        layout="@layout/toolbar_white"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:padding="12dp">
+        android:layout_height="?attr/actionBarSize" />
 
-        <TextView
-            android:id="@+id/env_label"
-            style="@style/tradeGothicLTStd_Dynamic18"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_margin="6dp"
-            android:text="Environment - MyHome"
-            android:textStyle="bold" />
+    <View
+        android:id="@+id/titleBarSeparator"
+        android:layout_width="match_parent"
+        android:layout_height="1dp"
+        android:background="@color/text_darker" />
 
-        <RadioGroup
-            android:id="@+id/env_myhome_radio_group"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_below="@id/env_label"
-            android:layout_margin="6dp">
+    <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+        xmlns:app="http://schemas.android.com/apk/res-auto"
+        xmlns:tools="http://schemas.android.com/tools"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:fillViewport="true"
+        tools:ignore="HardcodedText">
 
-            <RadioButton
-                android:id="@+id/radio_dev"
-                style="@style/tradeGothicLTStd_Dynamic18"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="@string/dev" />
-
-            <RadioButton
-                android:id="@+id/radio_slot1"
-                style="@style/tradeGothicLTStd_Dynamic18"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="@string/slot1" />
-
-            <RadioButton
-                android:id="@+id/radio_stage"
-                style="@style/tradeGothicLTStd_Dynamic18"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="@string/stage" />
-
-            <RadioButton
-                android:id="@+id/radio_prod"
-                style="@style/tradeGothicLTStd_Dynamic18"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="@string/prod" />
-        </RadioGroup>
-
-        <TextView
-            android:id="@+id/env_amwell_label"
-            style="@style/tradeGothicLTStd_Dynamic18"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_below="@id/env_myhome_radio_group"
-            android:layout_margin="6dp"
-            android:text="Environment - AmWell"
-            android:textStyle="bold" />
-
-        <RadioGroup
-            android:id="@+id/env_amwell_radio_group"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_below="@id/env_amwell_label"
-            android:layout_margin="6dp">
-
-            <RadioButton
-                android:id="@+id/radio_amwell_dev"
-                style="@style/tradeGothicLTStd_Dynamic18"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="@string/dev" />
-
-            <RadioButton
-                android:id="@+id/radio_amwell_iot"
-                style="@style/tradeGothicLTStd_Dynamic18"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="@string/iot" />
-
-            <RadioButton
-                android:id="@+id/radio_amwell_prod"
-                style="@style/tradeGothicLTStd_Dynamic18"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:enabled="false"
-                android:text="@string/prod" />
-        </RadioGroup>
-
-        <android.support.v7.widget.AppCompatCheckBox
-            android:id="@+id/checkbox_mutual_auth"
-            style="@style/tradeGothicLTStd_Dynamic18"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_below="@id/env_amwell_radio_group"
-            android:layout_margin="6dp"
-            android:text="Attempt Sign-In with Mutual Auth" />
-
-        <android.support.design.widget.TextInputLayout
-            android:id="@+id/user_layout"
+        <RelativeLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_below="@id/checkbox_mutual_auth"
-            app:errorEnabled="true"
-            app:errorTextAppearance="@style/error_appearance"
-            app:hintTextAppearance="@style/hint_appearance">
+            android:focusableInTouchMode="true"
+            android:padding="12dp">
 
-            <android.support.design.widget.TextInputEditText
-                android:id="@+id/user"
+            <TextView
+                android:id="@+id/env_label"
+                style="@style/tradeGothicLTStd_Dynamic18"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_margin="6dp"
+                android:text="Environment - MyHome"
+                android:textStyle="bold" />
+
+            <RadioGroup
+                android:id="@+id/env_myhome_radio_group"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_below="@id/env_label"
+                android:layout_margin="6dp">
+
+                <RadioButton
+                    android:id="@+id/radio_dev"
+                    style="@style/tradeGothicLTStd_Dynamic18"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="@string/dev" />
+
+                <RadioButton
+                    android:id="@+id/radio_slot1"
+                    style="@style/tradeGothicLTStd_Dynamic18"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="@string/slot1" />
+
+                <RadioButton
+                    android:id="@+id/radio_stage"
+                    style="@style/tradeGothicLTStd_Dynamic18"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="@string/stage" />
+
+                <RadioButton
+                    android:id="@+id/radio_prod"
+                    style="@style/tradeGothicLTStd_Dynamic18"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="@string/prod" />
+            </RadioGroup>
+
+            <TextView
+                android:id="@+id/env_amwell_label"
+                style="@style/tradeGothicLTStd_Dynamic18"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_below="@id/env_myhome_radio_group"
+                android:layout_margin="6dp"
+                android:text="Environment - AmWell"
+                android:textStyle="bold" />
+
+            <RadioGroup
+                android:id="@+id/env_amwell_radio_group"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_below="@id/env_amwell_label"
+                android:layout_margin="6dp">
+
+                <RadioButton
+                    android:id="@+id/radio_amwell_dev"
+                    style="@style/tradeGothicLTStd_Dynamic18"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="@string/dev" />
+
+                <RadioButton
+                    android:id="@+id/radio_amwell_iot"
+                    style="@style/tradeGothicLTStd_Dynamic18"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="@string/iot" />
+
+                <RadioButton
+                    android:id="@+id/radio_amwell_prod"
+                    style="@style/tradeGothicLTStd_Dynamic18"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:enabled="false"
+                    android:text="@string/prod" />
+            </RadioGroup>
+
+            <android.support.v7.widget.AppCompatCheckBox
+                android:id="@+id/checkbox_mutual_auth"
+                style="@style/tradeGothicLTStd_Dynamic18"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_below="@id/env_amwell_radio_group"
+                android:layout_margin="6dp"
+                android:text="Attempt Sign-In with Mutual Auth" />
+
+            <android.support.design.widget.TextInputLayout
+                android:id="@+id/user_layout"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:contentDescription="@string/prompt_email"
-                android:hint="@string/prompt_email"
-                android:imeOptions="actionNext"
-                android:inputType="textEmailAddress"
-                android:maxLines="1"
-                android:paddingLeft="10dp"
-                android:paddingRight="10dp"
-                android:singleLine="true"
-                android:text="jj@prokarma.com" />
+                android:layout_below="@id/checkbox_mutual_auth"
+                app:errorEnabled="true"
+                app:errorTextAppearance="@style/error_appearance"
+                app:hintTextAppearance="@style/hint_appearance">
 
-        </android.support.design.widget.TextInputLayout>
+                <android.support.design.widget.TextInputEditText
+                    android:id="@+id/user"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:contentDescription="@string/prompt_email"
+                    android:hint="@string/prompt_email"
+                    android:imeOptions="actionNext"
+                    android:inputType="textEmailAddress"
+                    android:maxLines="1"
+                    android:paddingLeft="10dp"
+                    android:paddingRight="10dp"
+                    android:singleLine="true"
+                    android:text="jj@prokarma.com" />
 
-        <android.support.design.widget.TextInputLayout
-            android:id="@+id/password_layout"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_below="@id/user_layout"
-            app:errorEnabled="true"
-            app:errorTextAppearance="@style/error_appearance"
-            app:hintTextAppearance="@style/hint_appearance"
-            app:passwordToggleEnabled="true"
-            app:passwordToggleTint="@color/primary">
+            </android.support.design.widget.TextInputLayout>
 
-            <android.support.design.widget.TextInputEditText
-                android:id="@+id/password"
+            <android.support.design.widget.TextInputLayout
+                android:id="@+id/password_layout"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:contentDescription="@string/prompt_password"
-                android:hint="@string/prompt_password"
-                android:imeOptions="actionNext"
-                android:inputType="text"
-                android:maxLines="1"
-                android:paddingLeft="10dp"
-                android:paddingRight="10dp"
-                android:text="Pass123*" />
+                android:layout_below="@id/user_layout"
+                app:errorEnabled="true"
+                app:errorTextAppearance="@style/error_appearance"
+                app:hintTextAppearance="@style/hint_appearance"
+                app:passwordToggleEnabled="true"
+                app:passwordToggleTint="@color/primary">
 
-        </android.support.design.widget.TextInputLayout>
+                <android.support.design.widget.TextInputEditText
+                    android:id="@+id/password"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:contentDescription="@string/prompt_password"
+                    android:hint="@string/prompt_password"
+                    android:imeOptions="actionNext"
+                    android:inputType="text"
+                    android:maxLines="1"
+                    android:paddingLeft="10dp"
+                    android:paddingRight="10dp"
+                    android:text="Pass123*" />
 
-        <Button
-            android:id="@+id/accept_button"
-            style="@style/enableButtonStyle"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_alignParentBottom="true"
-            android:layout_alignParentEnd="true"
-            android:layout_margin="6dp"
-            android:minHeight="40dp"
-            android:minWidth="120dp"
-            android:padding="12dp"
-            android:text="@string/finish" />
-
-    </RelativeLayout>
-</ScrollView>
+            </android.support.design.widget.TextInputLayout>
+        </RelativeLayout>
+    </ScrollView>
+</LinearLayout>
