--- a/MyHome/app/src/main/res/layout/visit_summary.xml
+++ b/MyHome/app/src/main/res/layout/visit_summary.xml
@@ -63,6 +63,17 @@
                 android:text="Your total cost for today's visit was $0.00" />
 
             <TextView
+                android:id="@+id/doctor_notes"
+                style="@style/tradeGothicLTStd_Dynamic18"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginEnd="24dp"
+                android:layout_marginStart="24dp"
+                android:layout_marginTop="16dp"
+                android:text="Your doctor is preparing additional information about your visit, you will be able to see it later in your Visit Summaries."
+                android:visibility="gone" />
+
+            <TextView
                 android:id="@+id/pharmacy_name"
                 style="@style/tradeGothicLTStd_Dynamic18"
                 android:layout_width="wrap_content"
@@ -121,17 +132,6 @@
                 android:layout_height="wrap_content"
                 android:layout_below="@+id/pharmacy_distance"
                 android:layout_marginTop="16dp"
-                android:visibility="gone" />
-
-            <TextView
-                android:id="@+id/doctor_notes"
-                style="@style/tradeGothicLTStd_Dynamic18"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginEnd="24dp"
-                android:layout_marginStart="24dp"
-                android:layout_marginTop="16dp"
-                android:text="If your doctor is preparing additional information about your visit, you will be able to see it later in your Visit Summaries."
                 android:visibility="gone" />
 
             <Button
