--- a/MyHome/app/src/main/res/layout/fragment_my_care.xml
+++ b/MyHome/app/src/main/res/layout/fragment_my_care.xml
@@ -138,6 +138,7 @@
                     android:textStyle="bold" />
 
                 <TextView
+                    android:id="@+id/personal_info_almost_complete"
                     style="@style/tradeGothicLTStd_Dynamic16"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
