$0.0 is made as $0.00 everywhere across the app using CommonUtility formatting method Added legal authority acceptance text on the intake screen for the Dependent flow

--- a/MyHome/app/src/main/res/layout/fragment_my_care_cost.xml
+++ b/MyHome/app/src/main/res/layout/fragment_my_care_cost.xml
@@ -128,6 +128,7 @@
             android:layout_gravity="left"
             android:layout_marginLeft="18dp"
             android:layout_marginRight="28dp"
+            android:layout_marginBottom="18dp"
             android:orientation="horizontal"
             app:alignContent="stretch"
             app:alignItems="stretch"
@@ -141,6 +142,7 @@
 
             <TextView
                 android:id="@+id/agree_privacy_policy_text1"
+                android:labelFor="@+id/agree_privacy_policy_check"
                 style="@style/tradeGothicLTStd_Dynamic18"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
@@ -148,6 +150,7 @@
 
             <TextView
                 android:id="@+id/agree_privacy_policy_text2"
+                android:labelFor="@+id/agree_privacy_policy_check"
                 style="@style/tradeGothicLTStd_Dynamic18"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
@@ -157,6 +160,7 @@
 
             <TextView
                 android:id="@+id/agree_privacy_policy_text3"
+                android:labelFor="@+id/agree_privacy_policy_check"
                 style="@style/tradeGothicLTStd_Dynamic18"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
@@ -164,6 +168,35 @@
                 android:text="@string/agree_privacy_policy_text3"
                 android:textColor="@color/accent"
                 android:textStyle="bold" />
+        </com.google.android.flexbox.FlexboxLayout> 
+
+        <com.google.android.flexbox.FlexboxLayout
+            android:id="@+id/agree_legal_dependent_layout"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_gravity="left"
+            android:layout_marginLeft="18dp"
+            android:layout_marginRight="28dp"
+            android:layout_marginBottom="18dp"
+            android:orientation="horizontal"
+            app:alignContent="space_between"
+            app:flexWrap="nowrap" >
+
+            <android.support.v7.widget.AppCompatCheckBox
+                app:alignItems="flex_start"
+                android:id="@+id/agree_legal_dependent_check"
+                android:gravity="top"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content" />
+
+            <TextView
+                app:alignItems="flex_end"
+                android:id="@+id/agree_legal_dependent_text"
+                android:labelFor="@+id/agree_legal_dependent_check"
+                style="@style/tradeGothicLTStd_Dynamic18"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/agree_legal_dependent_text" />
         </com.google.android.flexbox.FlexboxLayout>
 
         <ProgressBar
