Fixed below: Calendar Time view: Allow user to navigate back till today's date from future date (in case of Established user appt: currently it was allowing until first available appointment date only while navigating back from future date ) (in case of New user appt: currently it was allowing until PAST/LAPSED dates as well  )
On MYCareNow Dashboard screen -
Show "Me" for primary user in Who's visiting today section
Only Color coding that

--- a/MyHome/app/src/main/res/layout/dependents_spinner_item.xml
+++ b/MyHome/app/src/main/res/layout/dependents_spinner_item.xml
@@ -1,11 +1,23 @@
 <?xml version="1.0" encoding="utf-8"?>
-<TextView xmlns:android="http://schemas.android.com/apk/res/android"
-    android:id="@+id/consumer_name"
-    style="@style/tradeGothicLTStd_Dynamic18"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:ellipsize="marquee"
-    android:padding="4dp"
-    android:singleLine="true"
-    android:textAlignment="inherit"
-    android:textColor="@color/text_darker" />
+    android:layout_height="match_parent"
+    android:orientation="vertical">
+
+    <TextView
+        android:id="@+id/consumer_name"
+        style="@style/tradeGothicLTStd_Dynamic18"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:ellipsize="marquee"
+        android:padding="4dp"
+        android:singleLine="true"
+        android:textAlignment="inherit"
+        android:textColor="@color/text_darker" />
+
+    <View
+        android:id="@+id/dividerLine"
+        android:layout_width="fill_parent"
+        android:layout_height="1dp"
+        android:background="?android:attr/listDivider" />
+</LinearLayout>
