--- a/MyHome/app/src/main/res/layout/visit_summary.xml
+++ b/MyHome/app/src/main/res/layout/visit_summary.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
@@ -32,11 +33,12 @@
 
                 <TextView
                     android:id="@+id/provider_name"
-                    style="@style/tradeGothicLTStdLight_20"
+                    style="@style/tradeGothicLTStdLight_22"
                     android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
+                    android:layout_height="70dp"
                     android:layout_centerVertical="true"
                     android:layout_toRightOf="@+id/doc_image"
+                    android:gravity="center"
                     android:paddingLeft="15dp"
                     android:textStyle="bold"
                     tools:text="Richard Paul, MD" />
@@ -113,7 +115,7 @@
 
                 <TextView
                     android:id="@+id/pharmacy_phone"
-                    style="@style/tradeGothicLTStd_Dynamic20"
+                    style="@style/tradeGothicLTStd_Dynamic18"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_alignBottom="@id/phone_icon"
@@ -146,6 +148,84 @@
                 android:paddingRight="32dp"
                 android:text="View Visit Report"
                 android:textAllCaps="false" />
+        </LinearLayout>
+
+        <LinearLayout
+            android:id="@+id/email_layout"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_marginEnd="24dp"
+            android:layout_marginStart="24dp"
+            android:layout_marginTop="20dp"
+            android:orientation="vertical">
+
+            <TextView
+                android:id="@+id/email_text"
+                style="@style/tradeGothicLTStdLight_18"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginBottom="16dp"
+                android:layout_marginTop="10dp"
+                android:gravity="center"
+                android:text="@string/visit_summary_email"
+                android:textColor="@color/db_charcoal_grey" />
+
+            <RadioButton
+                android:id="@+id/email_agree"
+                style="@style/tradeGothicLTStdLight_14"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_below="@+id/email_text"
+                android:layout_marginBottom="16dp"
+                android:layout_marginLeft="-6dp"
+                android:text="@string/visit_summary_email_agree"
+                android:textColor="@color/db_charcoal_grey" />
+
+            <android.support.v7.widget.RecyclerView
+                android:id="@+id/email_list"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_below="@+id/email_agree"
+                android:layout_marginTop="16dp" />
+
+            <TextView
+                android:id="@+id/add_additional_email"
+                style="@style/tradeGothicLTStd_Dynamic18"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignParentLeft="true"
+                android:layout_below="@id/email_list"
+                android:layout_marginBottom="6dp"
+                android:layout_marginLeft="2dp"
+                android:gravity="left"
+                android:paddingTop="4dp"
+                android:text="@string/add_additional_email"
+                android:textColor="@color/accent"
+                android:textStyle="bold" />
+
+            <android.support.design.widget.TextInputLayout
+                android:id="@+id/new_email_layout"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                app:errorEnabled="true"
+                app:errorTextAppearance="@style/error_appearance"
+                app:hintTextAppearance="@style/hint_appearance">
+
+                <android.support.design.widget.TextInputEditText
+                    android:id="@+id/new_email"
+                    style="@style/tradeGothicLTStdLight_18"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:ellipsize="end"
+                    android:hint="@string/email_hint"
+                    android:imeOptions="actionNext"
+                    android:inputType="textCapWords"
+                    android:maxLength="35"
+                    android:maxLines="1"
+                    android:singleLine="true" />
+
+            </android.support.design.widget.TextInputLayout>
+
         </LinearLayout>
 
         <ProgressBar
