--- a/MyHome/app/src/main/res/layout/email_item.xml
+++ b/MyHome/app/src/main/res/layout/email_item.xml
@@ -6,7 +6,7 @@
     android:paddingBottom="4dp"
     android:paddingTop="4dp">
 
-    <RadioButton
+    <CheckBox
         android:id="@+id/email_id"
         style="@style/tradeGothicLTStdLight_18"
         android:layout_width="wrap_content"
