--- a/MyHome/app/src/main/res/layout/fragment_sec_password.xml
+++ b/MyHome/app/src/main/res/layout/fragment_sec_password.xml
@@ -16,7 +16,10 @@
             app:errorTextAppearance="@style/error_appearance"
             app:hintTextAppearance="@style/hint_appearance"
             app:passwordToggleEnabled="true"
-            android:importantForAccessibility="no"
+            app:hintEnabled="true"
+            android:focusableInTouchMode="true"
+            android:contentDescription="@string/enter_pass_for_sec_change"
+            android:focusedByDefault="true"
             app:passwordToggleTint="@color/primary">
 
             <android.support.design.widget.TextInputEditText
@@ -26,8 +29,8 @@
                 android:layout_above="@+id/log_in_button"
                 android:layout_marginBottom="8dp"
                 android:drawableRight="@mipmap/show_password"
+                android:importantForAccessibility="no"
                 android:hint="@string/prompt_password"
-                android:contentDescription="@string/enter_pass_for_sec_change"
                 android:imeOptions="actionDone"
                 android:inputType="textPassword"
                 android:maxLines="1"
