--- a/MyHome/app/src/main/res/values-v21/styles.xml
+++ b/MyHome/app/src/main/res/values-v21/styles.xml
@@ -15,10 +15,17 @@
         <item name="android:windowAllowReturnTransitionOverlap">true</item>
         <item name="android:windowSharedElementEnterTransition">@android:transition/move</item>
         <item name="android:windowSharedElementExitTransition">@android:transition/move</item>
+
+        <item name="android:actionMenuTextAppearance">@style/MyMenuTextAppearance</item>
     </style>
 
 
     <style name="DialogTheame" parent="Theme.AppCompat.Light.NoActionBar">
         <item name="android:statusBarColor">@color/black</item>
+    </style>
+
+    <style name="MyMenuTextAppearance" parent="@style/TextAppearance.AppCompat.Widget.ActionBar.Menu">
+        <item name="android:textAllCaps">false</item>
+        <item name="android:textSize">18dp</item>
     </style>
 </resources>
