--- a/MyHome/app/src/main/res/values/styles.xml
+++ b/MyHome/app/src/main/res/values/styles.xml
@@ -10,6 +10,12 @@
         <item name="colorControlNormal">@color/accent</item>
         <item name="android:actionMenuTextColor">@color/accent</item>
         <item name="colorAccent">@color/accent</item>
+        <item name="android:actionMenuTextAppearance">@style/MyMenuTextAppearance</item>
+    </style>
+
+    <style name="MyMenuTextAppearance" parent="@style/TextAppearance.AppCompat.Widget.ActionBar.Menu">
+        <item name="android:textAllCaps">false</item>
+        <item name="android:textSize">18dp</item>
     </style>
 
     <style name="customTabLayout" parent="TextAppearance.Design.Tab">
