--- a/MyHome/app/src/main/res/layout/fragment_pharmacy_list.xml
+++ b/MyHome/app/src/main/res/layout/fragment_pharmacy_list.xml
@@ -32,6 +32,14 @@
         android:layout_marginStart="16dp"
         android:visibility="gone" />
 
+    <TextView
+        android:id="@+id/message"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_centerInParent="true"
+        android:gravity="center"
+        android:visibility="gone" />
+
     <ProgressBar
         android:id="@+id/search_progress"
         android:layout_width="wrap_content"
