Applause Accessibility - 2872163 Talkback: Find Care: Page titles are not unique is fixed. Kept the titles depending on the screen functionality, need a confirmation on the screen title are suits to each screen.

--- a/MyHome/app/src/main/res/layout/fragment_fad.xml
+++ b/MyHome/app/src/main/res/layout/fragment_fad.xml
@@ -51,7 +51,7 @@
                 android:layout_marginLeft="4dp"
                 android:layout_toRightOf="@+id/fad_back"
                 android:padding="16dp"
-                android:text="@string/fad_title"
+                android:text="@string/providers"
                 android:textColor="@color/md_blue_grey_650"
                 android:textStyle="bold" />
 
