Fixed 29259: Android - user not able to see the first name on choose doctor screen (the message should starts with first name) as per zeplin.

--- a/MyHome/app/src/main/res/layout/fragment_my_care_providers.xml
+++ b/MyHome/app/src/main/res/layout/fragment_my_care_providers.xml
@@ -6,6 +6,7 @@
     tools:context="com.televisit.services.MyCareServicesFragment">
 
     <TextView
+        android:id="@+id/choose_text"
         style="@style/tradeGothicLTStd_Dynamic20"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
