--- a/MyHome/app/src/main/res/layout/visit_summary.xml
+++ b/MyHome/app/src/main/res/layout/visit_summary.xml
@@ -195,7 +195,7 @@
                 android:layout_height="wrap_content"
                 android:layout_alignParentLeft="true"
                 android:layout_below="@id/email_list"
-                android:layout_marginBottom="6dp"
+                android:layout_marginBottom="16dp"
                 android:layout_marginLeft="2dp"
                 android:gravity="left"
                 android:paddingTop="4dp"
@@ -203,28 +203,53 @@
                 android:textColor="@color/accent"
                 android:textStyle="bold" />
 
-            <android.support.design.widget.TextInputLayout
+            <RelativeLayout
                 android:id="@+id/new_email_layout"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                app:errorEnabled="true"
-                app:errorTextAppearance="@style/error_appearance"
-                app:hintTextAppearance="@style/hint_appearance">
+                android:layout_below="@+id/new_email_layout"
+                android:visibility="visible">
 
-                <android.support.design.widget.TextInputEditText
-                    android:id="@+id/new_email"
-                    style="@style/tradeGothicLTStdLight_18"
+                <android.support.design.widget.TextInputLayout
+                    android:id="@+id/new_email_textinput"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:ellipsize="end"
-                    android:hint="@string/email_hint"
-                    android:imeOptions="actionNext"
-                    android:inputType="textCapWords"
-                    android:maxLength="35"
-                    android:maxLines="1"
-                    android:singleLine="true" />
+                    app:errorEnabled="true"
+                    app:errorTextAppearance="@style/error_appearance"
+                    app:hintTextAppearance="@style/hint_appearance">
 
-            </android.support.design.widget.TextInputLayout>
+                    <android.support.design.widget.TextInputEditText
+                        android:id="@+id/new_email_edittext"
+                        style="@style/tradeGothicLTStdLight_18"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:ellipsize="end"
+                        android:hint="@string/email_hint"
+                        android:imeOptions="actionNext"
+                        android:inputType="textCapWords"
+                        android:maxLength="35"
+                        android:maxLines="1"
+                        android:singleLine="true" />
+
+                </android.support.design.widget.TextInputLayout>
+
+                <TextView
+                    android:id="@+id/add_email"
+                    style="@style/tradeGothicLTStd_Dynamic18"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_alignBottom="@id/new_email_textinput"
+                    android:layout_alignParentRight="true"
+                    android:layout_alignTop="@id/new_email_textinput"
+                    android:contentDescription="@string/add"
+                    android:gravity="center"
+                    android:paddingLeft="8dp"
+                    android:paddingRight="8dp"
+                    android:layout_marginBottom="16dp"
+                    android:text="@string/add"
+                    android:textColor="@color/accent"
+                    android:textStyle="bold" />
+            </RelativeLayout>
 
         </LinearLayout>
 
