Fixed: 30253: Android - user able to select the both check box for "do  you need assistance ?" while filling the reg form

--- a/MyHome/app/src/main/res/layout/book_dialog_personal.xml
+++ b/MyHome/app/src/main/res/layout/book_dialog_personal.xml
@@ -427,6 +427,7 @@
             android:orientation="horizontal">
 
             <RadioButton
+                android:id="@+id/assistance_not_needed"
                 style="@style/tradeGothicLTStdLight_14"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
