Fixed #28527: We now distinguish between Providers that are "Offline" and Providers that are "Busy"

--- a/MyHome/app/src/main/res/layout/adapter_my_care_provider_item.xml
+++ b/MyHome/app/src/main/res/layout/adapter_my_care_provider_item.xml
@@ -64,7 +64,7 @@
                 style="@style/tradeGothicLTStd_Dynamic18"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="Offline" />
+                android:text="@string/offline" />
         </RelativeLayout>
 
         <ImageView
