--- a/MyHome/app/src/main/res/layout/visit_feedback.xml
+++ b/MyHome/app/src/main/res/layout/visit_feedback.xml
@@ -46,6 +46,7 @@
                 android:layout_marginTop="16dp" />
 
             <TextView
+                android:id="@+id/text_question3"
                 style="@style/tradeGothicLTStd_Dynamic20"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
@@ -56,7 +57,8 @@
             <RadioGroup
                 android:id="@+id/radio_group"
                 android:layout_width="wrap_content"
-                android:layout_height="wrap_content">
+                android:layout_height="wrap_content"
+                android:orientation="vertical">
 
                 <RadioButton
                     android:id="@+id/radio_emergency_care"
