--- a/MyHome/app/src/main/res/drawable/home.xml
+++ b/MyHome/app/src/main/res/drawable/home.xml
@@ -1,8 +1,8 @@
 <vector xmlns:android="http://schemas.android.com/apk/res/android"
-    android:width="19dp"
+    android:width="22dp"
     android:height="25dp"
-    android:viewportHeight="25.0"
-    android:viewportWidth="19.0">
+    android:viewportWidth="22.0"
+    android:viewportHeight="25.0">
     <path
         android:fillColor="#097288"
         android:pathData="M19.48 10.766v9.394c0 1.016-.822 1.84-1.855 1.84H4.305a1.848 1.848 0 0 1-1.855-1.84v-9.394H.947c-1.029 0-1.25-.571-.512-1.277L9.816.523a1.925 1.925 0 0 1 2.66.022l9.097 8.922c.734.72.497 1.3-.523 1.3h-1.57zM12.984 8.65c-.743 0-1.442.274-1.984.75a3.003 3.003 0 0 0-1.984-.75c-1.719 0-3.043 1.56-3.043 3.518 0 1.413.911 2.807 2.407 4.174a16.4 16.4 0 0 0 2.297 1.746l.326.198.325-.2a16.266 16.266 0 0 0 .724-.49 16.89 16.89 0 0 0 1.57-1.275c1.409-1.296 2.299-2.605 2.397-3.923.005-.077.008-.154.008-.23 0-1.966-1.32-3.518-3.043-3.518z"
