--- a/MyHome/app/src/main/res/layout/visit_summary.xml
+++ b/MyHome/app/src/main/res/layout/visit_summary.xml
@@ -33,6 +33,7 @@
 
                 <TextView
                     android:id="@+id/provider_name"
+                    android:focusable="true"
                     style="@style/tradeGothicLTStdLight_22"
                     android:layout_width="wrap_content"
                     android:layout_height="70dp"
@@ -52,7 +53,8 @@
                 android:layout_marginEnd="24dp"
                 android:layout_marginStart="24dp"
                 android:paddingTop="24dp"
-                android:text="@string/your_visit_has_ended" />
+                android:text="@string/your_visit_has_ended"
+                android:contentDescription="@string/your_visit_has_ended" />
 
             <TextView
                 android:id="@+id/cost_description"
@@ -146,7 +148,8 @@
                 android:layout_marginTop="16dp"
                 android:paddingLeft="32dp"
                 android:paddingRight="32dp"
-                android:text="View Visit Report"
+                android:text="@string/view_visit_report"
+                android:contentDescription="@string/view_visit_report"
                 android:textAllCaps="false" />
         </LinearLayout>
 
@@ -168,6 +171,7 @@
                 android:layout_marginTop="10dp"
                 android:gravity="center"
                 android:text="@string/visit_summary_email"
+                android:contentDescription="@string/visit_summary_email"
                 android:textColor="@color/db_charcoal_grey" />
 
             <CheckBox
@@ -179,6 +183,7 @@
                 android:layout_marginBottom="16dp"
                 android:layout_marginLeft="-6dp"
                 android:text="@string/visit_summary_email_agree"
+                android:contentDescription="@string/visit_summary_email_agree"
                 android:textColor="@color/db_charcoal_grey" />
 
             <android.support.v7.widget.RecyclerView
@@ -200,6 +205,7 @@
                 android:gravity="left"
                 android:paddingTop="4dp"
                 android:text="@string/add_additional_email"
+                android:contentDescription="@string/add_additional_email"
                 android:textColor="@color/accent"
                 android:textStyle="bold" />
 
@@ -241,12 +247,12 @@
                     android:layout_alignBottom="@id/new_email_textinput"
                     android:layout_alignParentRight="true"
                     android:layout_alignTop="@id/new_email_textinput"
-                    android:contentDescription="@string/add"
                     android:gravity="center"
                     android:paddingLeft="8dp"
                     android:paddingRight="8dp"
                     android:layout_marginBottom="16dp"
                     android:text="@string/add"
+                    android:contentDescription="@string/add"
                     android:textColor="@color/accent"
                     android:textStyle="bold" />
             </RelativeLayout>
