--- a/MyHome/app/src/main/res/layout/book_dialog_personal.xml
+++ b/MyHome/app/src/main/res/layout/book_dialog_personal.xml
@@ -7,6 +7,7 @@
     android:theme="@style/textInputLayoutStyle">
 
     <LinearLayout
+        android:id="@+id/linear_main"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="vertical"
@@ -450,9 +451,9 @@
             android:id="@+id/booking_reason_layout"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            app:hintEnabled="false"
             app:errorEnabled="true"
-            app:errorTextAppearance="@style/error_appearance"
-            app:hintTextAppearance="@style/hint_appearance">
+            app:errorTextAppearance="@style/error_appearance">
 
             <android.support.design.widget.TextInputEditText
                 android:id="@+id/booking_reason"
