Bug id 30398 :Accessibility - talkback v1.6.2- My care now  - Pharmacy - map button unlabelled is fixed.

--- a/MyHome/app/src/main/res/layout/fragment_my_care.xml
+++ b/MyHome/app/src/main/res/layout/fragment_my_care.xml
@@ -312,6 +312,7 @@
                     android:layout_below="@+id/pharmacy_edit"
                     android:layout_centerVertical="true"
                     android:layout_toLeftOf="@id/pharmacy_edit"
+                    android:contentDescription="@string/pharmacy_show_in_map"
                     android:src="@mipmap/map_blue" />
             </RelativeLayout>
         </RelativeLayout>
